--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,12 +3,12 @@
 <%= form_tag(post_path(@post), method: "put") do %>
     <div class="edit-field">
       <%= label_tag "Title: " %>
-      <%= text_field_tag :title %>
+      <%= text_field_tag :title, @post.title %>
     </div>
 
     <div class="edit-field">
       <%= label_tag "Body: " %>
-      <%= text_area_tag :content %>
+      <%= text_area_tag :content, @post.content %>
     </div>
 
     <%= submit_tag "Edit Post" %>
