--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,4 +6,4 @@
 </div>
 
 <%= link_to "Posts Index", posts_path %>
-<%= link_to "Edit post", edit_path(@post) %>
+<%= link_to "Edit Post", edit_path(@post) %>
